fixed columnizing on [age and overlapping Row problem

--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -2984,7 +2984,7 @@ select[multiple].form-group-lg .form-control {
   .form-horizontal .control-label {
     padding-top: 7px;
     margin-bottom: 0;
-    text-align: right;
+    text-align: center;
   }
 }
 .form-horizontal .has-feedback .form-control-feedback {
@@ -5343,11 +5343,13 @@ a.list-group-item-danger.active:focus {
 }
 .panel {
   margin-bottom: 20px;
-  background-color: #fff;
-  border: 1px solid transparent;
-  border-radius: 4px;
+  /* background-color: #fff; */
+  background: url ('img/Third-Info-Banner.jpg');
+  /* border: 1px solid transparent; */
+  /* border-radius: 4px; */
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+          
+  /* box-shadow: 0 1px 1px rgba(0, 0, 0, .05); */
 }
 .panel-body {
   padding: 15px;
