--- a/app/css/demo.css
+++ b/app/css/demo.css
@@ -28,7 +28,7 @@ h1, h2, h3 {
   overflow: hidden;
   font-size: 0;
   margin: 0 auto;
-  float: right;
+  float: left;
 }
 .scroll-img ul {
   width: 700px;
